--- a/learning/courses/qiskit-in-classrooms-computer-science/deutsch-jozsa.ipynb
+++ b/learning/courses/qiskit-in-classrooms-computer-science/deutsch-jozsa.ipynb
@@ -40,9 +40,7 @@
     "  alt=\"YT thumbnail\"\n",
     "  href=\"https://youtu.be/QcK0GK7DUh8?si=8e0Lmjgylxmgl2y7\"\n",
     "  src=\"/learning/images/courses/qiskit-in-classrooms-computer-science/deutsch-jozsa/YT-thumb.avif\"\n",
-    "/>\n",
-    "\n",
-    "   "
+    "/>"
    ]
   },
   {
@@ -412,7 +410,7 @@
     "|\\pi_2\\rangle = \\begin{cases}\n",
     "\\pm[\\frac{|0\\rangle-|1\\rangle}{\\sqrt{2}}][\\frac{|0\\rangle+|1\\rangle}{\\sqrt{2}}] & \\text{if} & f(0) = f(1) \\\\\n",
     "\\pm[\\frac{|0\\rangle-|1\\rangle}{\\sqrt{2}}][\\frac{|0\\rangle-|1\\rangle}{\\sqrt{2}}] &\\text{if} & f(0) \\neq f(1) \\\\\n",
-    "\\end{cases} \n",
+    "\\end{cases}\n",
     "$\n",
     "\n",
     "</details>\n",
@@ -1086,7 +1084,7 @@
  "metadata": {
   "description": "Learn how the Deutsch-Jozsa algorithm uses quantum parallelism and interference to achieve an exponential speedup over classical algorithms.",
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1100,7 +1098,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.13"
+   "version": "3"
   },
   "title": "The Deutsch-Jozsa Algorithm",
   "widgets": {
