--- a/learning/courses/qiskit-in-classrooms-computer-science/quantum-teleportation.ipynb
+++ b/learning/courses/qiskit-in-classrooms-computer-science/quantum-teleportation.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "24d7b427-0f64-4421-a2c5-781dc55ff749",
    "metadata": {},
    "source": [
     "# Quantum Teleportation\n",
@@ -18,6 +19,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b32ad699-870a-48c8-8ab3-90f419a232fe",
    "metadata": {},
    "source": [
     "-------\n",
@@ -30,13 +32,12 @@
     "  alt=\"YT thumbnail\"\n",
     "  href=\"https://youtu.be/jxqnzltpDdE?si=UVL58hFOOWe2Q9qI\"\n",
     "  src=\"/learning/images/courses/qiskit-in-classrooms-computer-science/quantum-teleportation/YT-thumb.avif\"\n",
-    "/>\n",
-    "\n",
-    "   "
+    "/>"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "52d104f9-da10-4f7e-941b-59e6407558fd",
    "metadata": {},
    "source": [
     "## 1. Introduction and background\n",
@@ -89,6 +90,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d1ee64f2-97dd-42be-bb55-ffbcf3e6f207",
    "metadata": {},
    "source": [
     "We start with two collaborators Alice and Bob, who are initially in the same location and can work together on the same qubits. These collaborators will entangle their qubits. Then they will move apart to two different geographic locations, bringing their respective qubits with them. Alice will then obtain quantum information on a new qubit Q. We make no assumptions about the information on Q. The state of Q could be a secret unknown to Alice; it could be unknown to all people. But Alice is given the task of transferring the information on Q to Bob. She will do this using quantum teleportation.\n",
@@ -98,6 +100,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "3783573c-a9ed-44f6-bf65-2dabf6b4da6a",
    "metadata": {},
    "source": [
     "## 2. Quantum operators (gates)\n",
@@ -150,6 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "c405a8d6-b263-4bf1-b76e-76e67aa8d7b1",
    "metadata": {},
    "outputs": [
     {
@@ -173,6 +177,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a4667986-f8ed-4d9f-ae7d-da8d5ea100a5",
    "metadata": {},
    "source": [
     "__CNOT Controlled-NOT Gate:__ This gate uses two qubits: a control and a target. Checks the state of a control qubit which is not changed. But if the control qubit is in the state $|1\\rangle$, the gate changes the state of the target qubit; if the state of the control qubit is $|0\\rangle$ no change is made at all. In the notation below, assume the qubit $A$ (right-most qubit) is the control, and qubit $B$ (the left-most qubit) is the target. Below, the notation used is $CNOT(q_{control},q_{target})|BA\\rangle.$\n",
@@ -193,6 +198,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "be85a8a6-3826-4f89-ac3a-8c7cbfbd7062",
    "metadata": {},
    "outputs": [
     {
@@ -214,6 +220,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "187b0627-2baf-44e2-9b62-695cda1f0507",
    "metadata": {},
    "source": [
     "### Check-in question\n",
@@ -236,6 +243,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "763e5916-cfca-4386-969d-48869a024d31",
    "metadata": {},
    "source": [
     "**$X$ Gate**: Equivalent to a NOT operation. Single-qubit gate.\n",
@@ -254,6 +262,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "5cd63666-e56e-4961-a98d-02ded63f56a1",
    "metadata": {},
    "outputs": [
     {
@@ -275,6 +284,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "953cc33c-c661-49cc-91e8-517e9addf5a3",
    "metadata": {},
    "source": [
     "**$Z$ Gate**: Adds a \"phase\" to a state (a prefactor, which in the cases of the Z eigenstates $|0\\rangle$ and $|1\\rangle$ either a 1, or -1, respectively). Single-qubit gate.\n",
@@ -293,6 +303,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "4e6da81e-73c2-41f3-99a9-4374bba25f11",
    "metadata": {},
    "outputs": [
     {
@@ -314,6 +325,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "992d2617-3787-46f6-b653-563daabc6ce1",
    "metadata": {},
    "source": [
     "## 3. Theory\n",
@@ -335,6 +347,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "38050499-6062-4fb3-a7d6-55d8c25f95d4",
    "metadata": {},
    "source": [
     "__Alice and Bob separate:__ The two friends move their qubits to new locations, possibly very far apart. This comes with a lot of caveats: it is not trivial to move quantum information without disturbing it. But it can be moved, and indeed you will move it in this module. But keep in mind as a caveat that we expect to encounter some errors when we move quantum information around a lot.\n",
@@ -356,6 +369,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "4b134041-ea40-4bfc-a989-efcef66142a1",
    "metadata": {},
    "source": [
     "Because the information begins on Q, we will assume Q is assigned the lowest number in qubit numbers, such that little endian notation causes Q to be the right-most qubit in the math below.\n",
@@ -375,6 +389,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "18cc6db3-02e3-4df3-9e10-8cc8df5f0b1e",
    "metadata": {},
    "source": [
     "Because A and Q are in the same location, let us group the terms above according to the outcomes of measurements on qubits A and Q:\n",
@@ -398,11 +413,12 @@
     "25%. To see this, recall that Bob's state must be normalized, so\n",
     "$$ |_A \\langle0|_Q\\langle0| \\frac{1}{2} |0\\rangle_A|0\\rangle_Q (\\alpha_0 |0\\rangle_B+\\alpha_1 |1\\rangle_B)|^2 = \\frac{1}{4}|(\\alpha_0 |0\\rangle_B+\\alpha_1 |1\\rangle_B)|^2 = \\frac{1}{4}$$\n",
     "\n",
-    "</details>\n"
+    "</details>"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "de1c8bd7-d9fe-4f05-8b1f-df88a2cbc504",
    "metadata": {},
    "source": [
     "Now, Alice can measure qubits A and Q . She cannot control the outcome of that measurement, since quantum measurements are probabilistic. So when she measures, there are 4 possible outcomes and all 4 are equally likely: $|0\\rangle_A|0\\rangle_Q,$ $|0\\rangle_A|1\\rangle_Q,$ $|1\\rangle_A|0\\rangle_Q,$ and $|1\\rangle_A|1\\rangle_Q.$ Note that each outcome has different implications for Bob's qubit. For example, if Alice finds her qubits to be in $|0\\rangle_A|0\\rangle_Q,$ that has collapsed the entire, 3-qubit quantum state to $(\\alpha_0|0\\rangle_B+\\alpha_1|1\\rangle_B)|0\\rangle_A|0\\rangle_Q.$ Other measurement outcomes for Alice yield different states for Bob. These are collected together in the table below."
@@ -410,6 +426,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "6c5425b7-6368-438b-8c33-0c6a910a0543",
    "metadata": {},
    "source": [
     "| Alice outcome | Bob's state  | Instruction to Bob| Result |\n",
@@ -422,6 +439,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "7dcc0da3-439c-40e9-93d4-6df89e814e2d",
    "metadata": {},
    "source": [
     "For all the possible measurement outcomes on Alice's qubits, Bob's qubit is left in a state vaguely resembling the secret state originally on Q. In the case where Alice measures $|0\\rangle_C|0\\rangle_A$ (the first row of the table), Bob's qubit is left in exactly the secret state! In the other cases, there is something off about the state. The coefficients ($\\alpha$'s) are swapped, or there is a \"-\" sign where there should be a \"+\" sign, or both. In order to modify Bob's qubit to make it exactly equal to the secret state, Alice must call Bob (use some means of classical communication) and tell Bob to perform additional operations on his qubit, as outlined in the table. For example, in the third row the coefficients are swapped. If Alice calls Bob and tells him to apply an $X$ gate to his qubit, it changes a $|0\\rangle$ to a $|1\\rangle$ and vice-versa, and out comes the secret state.\n",
@@ -433,6 +451,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "fc51dcc0-802c-42e2-9c76-910f179446df",
    "metadata": {},
    "source": [
     "## 4. Experiment 1: Basic teleportation\n",
@@ -451,6 +470,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "415d771d-ec7a-4e92-899a-8d531aecb75b",
    "metadata": {},
    "outputs": [
     {
@@ -517,6 +537,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "beca3729-c876-4a43-909e-3b9a1c9289fa",
    "metadata": {},
    "source": [
     "That's all we have to do to get Alice's state teleported to Bob. However, recall that when we measure a quantum state $\\alpha_0 |0\\rangle+\\alpha_1|1\\rangle$ we find either $|0\\rangle$ or $|1\\rangle.$ So at the end of all this, Bob definitely has Alice's secret state, but we can't easily verify this with a measurement. In order for a measurement to tell us that we did this correctly, we have to do a trick. We had an operator labeled \"U\" for \"unitary\" which we used to prepare Alice's secret state. We can apply the inverse of U at the end of our circuit. If U mapped Alice's $|0\\rangle$ state into $\\alpha_0 |0\\rangle+\\alpha_1|1\\rangle$, then the inverse of U will map Bob's $\\alpha_0 |0\\rangle+\\alpha_1|1\\rangle$ back to $|0\\rangle.$ So this last part wouldn't necessarily be done if the goal were just to move quantum information. This is only done for us to check ourselves."
@@ -525,6 +546,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
+   "id": "5c921f18-91be-4ff6-b017-b3c4a994ed2a",
    "metadata": {},
    "outputs": [
     {
@@ -550,6 +572,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "76bf587b-3c44-438f-9895-e30896fb4f4b",
    "metadata": {},
    "source": [
     "So if we've done this correctly, our measurement on Bob's qubit should yield a $|0\\rangle$ state. Of course, these measurements are probabilistic. So if there is even a small chance of measuring Bob's qubit to be in the $|1\\rangle$ state, then a single measurement could result in $|1\\rangle.$ We would really want to make many measurements to be assured that the probability of $|0\\rangle$ is quite high.\n",
@@ -564,6 +587,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
+   "id": "b5d0a3ea-0b19-46f4-8220-442067c62959",
    "metadata": {},
    "outputs": [
     {
@@ -588,6 +612,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "993976c8-de51-42a0-afd1-034212cf4ac9",
    "metadata": {},
    "source": [
     "Now we must \"transpile\" the quantum circuit. This involves many sub-steps and is a fascinating topic. Just to give an example of a sub-step: not all quantum computers can directly implement all logical gates in Qiskit. We must write the gates from our circuit in terms of gates the quantum computer can implement. We can carry out that process, and others, using a preset pass manager. Setting ```optimization = 3``` (the highest level of optimization) ensures that the mapping from our abstract quantum circuit to the instructions given to the quantum computer is as efficient as our pre-processing can get it."
@@ -596,6 +621,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
+   "id": "9fd4463f-9282-4b30-ae4f-935e369e3c21",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -609,6 +635,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "473a3ede-456f-46ac-b68e-529eb5fa0231",
    "metadata": {},
    "source": [
     "A \"sampler\" is a primitive designed to sample possible states resulting from a quantum circuit, and collect statistics on what states might be measured and with what probability. We import the Qiskit Runtime sampler here:"
@@ -617,6 +644,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
+   "id": "821bbd45-1156-4060-9a67-6698d7506dfe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -628,6 +656,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "2e3bf857-49a3-4c7f-95d3-7e1825e56967",
    "metadata": {},
    "source": [
     "Not all computations on a quantum computer can be reasonably simulated on classical computers. This simple teleportation definitely can be, but it isn't at all surprising that we can classically save information in one place or another. We strongly recommend carrying out these calculations using a real IBM quantum computer. But in case you have exhausted your free monthly use, or if something must be completed in class and can't wait in the queue, this module can be completed using a simulator. To do this, simply run the cell below and uncomment the associated lines in the \"Execute\" steps."
@@ -636,6 +665,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "90fcad19-44a6-4199-abcd-04bde60bb32e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -662,6 +692,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "6cc1ea9a-46cf-4ec5-82de-44e70fac28d4",
    "metadata": {},
    "source": [
     "### 4.3. Step 3: Execute\n",
@@ -672,6 +703,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
+   "id": "5f04593e-85c2-4058-87f5-057908921ee1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -687,6 +719,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d6d3a1b9-8eb4-4b1a-863b-3a9046b992f4",
    "metadata": {},
    "source": [
     "### 4.4. Step 4: Post-processing and analysis\n",
@@ -697,6 +730,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
+   "id": "1fa496b3-8e41-4df6-a818-ad6503c08d66",
    "metadata": {},
    "outputs": [
     {
@@ -719,6 +753,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f862ba32-5e15-44e5-a070-a8c2a35b2dba",
    "metadata": {},
    "source": [
     "### Check-in question\n",
@@ -742,6 +777,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8c4b98a4-f9ef-4950-b0e4-afd0ab912f92",
    "metadata": {},
    "source": [
     "## 5. Experiment 2: Teleporting across a processor\n",
@@ -756,6 +792,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
+   "id": "33a4b5d7-249a-4cb1-9dc9-2ccc3b4bcde5",
    "metadata": {},
    "outputs": [
     {
@@ -839,6 +876,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "5fb766cd-190e-4de8-bf6e-b7d31e330999",
    "metadata": {},
    "source": [
     "You can see in the circuit diagram that the logical steps are the same. The only difference is that we used the swap gates to bring Alice's qubit's state from qubit 6 ($A_5$) up to qubit 1 ($A_0$), right next to Q. And we used swap gates to bring Bob's initial state from qubit 7 ($B_0$) down to qubit 12 ($B_5$). Note that the state on qubit 12 is not even related to Q's secret state until measurements are made on the distant qubits 0 and 1, and the state on qubit 12 is not equal to the secret state until after the conditional $X$ and $Z$ gates are applied.\n",
@@ -851,6 +889,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
+   "id": "b924093f-53a8-4c9c-ac5d-e293f2bd8aaf",
    "metadata": {},
    "outputs": [
     {
@@ -875,6 +914,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "860b7f1e-cca1-4f58-a872-430cf4ef1ce7",
    "metadata": {},
    "source": [
     "We can visualize where on the quantum processor these qubits are using the ```plot_circuit_layout``` function."
@@ -882,6 +922,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "aba67894-a806-4818-aa8b-f4b2405300db",
    "metadata": {},
    "source": [
     "### 5.3 Step 3: Run\n",
@@ -892,6 +933,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
+   "id": "2618f38e-0100-4dc1-864b-0cdaa7d6e5ea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -904,6 +946,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
+   "id": "b51099c2-6521-4597-b430-d2f47943d2f7",
    "metadata": {},
    "outputs": [
     {
@@ -925,6 +968,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b5cc114d-cc69-4d7f-a1bd-2844f4ca9346",
    "metadata": {},
    "source": [
     "### 5.4. Step 4: Classical post-processing\n",
@@ -934,6 +978,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "839d6f65-bb4e-40fb-84dc-8b42e7d29d29",
    "metadata": {},
    "source": [
     "## 6. Review and questions:\n",
@@ -998,19 +1043,12 @@
     "\n",
     "2. Is there anything unique about the initial entangled state between Alice and Bob: $\\frac{1}{\\sqrt{2}}\\left(|0\\rangle_B|0\\rangle_A+|1\\rangle_B|1\\rangle_A\\right)?$ If so, what is unique about it? If not, what other entangled states could we have used?"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "description": "Explore how quantum teleportation transfers a quantum state from one location to another using the principles of quantum entanglement.",
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1024,7 +1062,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.13"
+   "version": "3"
   },
   "title": "Quantum Teleportation",
   "widgets": {
