--- a/learning/courses/qiskit-in-classrooms-quantum-mechanics/bells-inequality-with-qiskit.ipynb
+++ b/learning/courses/qiskit-in-classrooms-quantum-mechanics/bells-inequality-with-qiskit.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "4710734e-3ee7-48b9-8aa6-667413aff37d",
    "metadata": {},
    "source": [
     "{/* cspell:ignore Gott würfelt nicht outcoming Rihanna Rihanna's Marshman */}\n",
@@ -11,6 +12,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "4a4aca7e-268c-4554-84ad-92b2557175c9",
    "metadata": {},
    "source": [
     "For this Qiskit in Classroom module, students must have a working Python environment with the following packages installed:\n",
@@ -25,6 +27,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1e4197cd-b382-45ea-bfe2-3a1a4e756e11",
    "metadata": {},
    "source": [
     "-------\n",
@@ -38,13 +41,12 @@
     "  alt=\"YT thumbnail\"\n",
     "  href=\"https://youtu.be/pS69lqCMdy8?si=jFnyrUKjlyw2xRyi\"\n",
     "  src=\"/learning/images/courses/qiskit-in-classrooms-quantum-mechanics/bells-inequality-with-qiskit/YT-thumb.avif\"\n",
-    "/>\n",
-    "\n",
-    "    "
+    "/>"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "5f167239-e924-419c-9896-6ca820f22ba0",
    "metadata": {},
    "source": [
     "## The problem\n",
@@ -60,6 +62,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c17a5cc7-fc83-4471-b6e0-659904aa83c0",
    "metadata": {},
    "source": [
     "## Setup of the thought experiment: entanglement of spin\n",
@@ -83,6 +86,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "5dc05f9e-f42c-4f7f-b78a-ea4f3c19d28d",
    "metadata": {},
    "source": [
     "## Our options\n",
@@ -133,6 +137,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8e27dc3d-5de0-4930-9c69-b4cd17a8d467",
    "metadata": {},
    "source": [
     "## What does Einstein's option (hidden variables) predict?\n",
@@ -198,6 +203,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9e59ef16-7112-407e-a3c0-b2c4829d223b",
    "metadata": {},
    "source": [
     "### Generalization\n",
@@ -215,6 +221,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d7eeff65-1f07-4626-90c6-df2678b9f30c",
    "metadata": {},
    "source": [
     "## What does Born's option (non-deterministic quantum mechanics) predict?\n",
@@ -297,6 +304,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ea3cb61b-3f94-4f26-8db9-06cc9e6c93e1",
    "metadata": {},
    "source": [
     "## Wow\n",
@@ -314,6 +322,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "905fe3de-bae2-48cf-a7b7-3f573024a385",
    "metadata": {},
    "source": [
     "## Test using real quantum computers!\n",
@@ -333,6 +342,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "f9d668c6-137c-467a-b8a1-17e1846cd143",
    "metadata": {},
    "outputs": [
     {
@@ -356,6 +366,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "3a34f635-d0b0-4bad-abed-82ee77b231c1",
    "metadata": {},
    "source": [
     "$H$ Hadamard gate: Creates a superposition state. Single-qubit gate.\n",
@@ -369,6 +380,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "96491841-1b70-4e0e-bf14-9d41d64a23ee",
    "metadata": {},
    "outputs": [
     {
@@ -390,6 +402,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "5a5707f8-3269-41be-91a4-856fbfe3f06a",
    "metadata": {},
    "source": [
     "CNOT Controlled-NOT gate: This gate uses two qubits: a control and a target. Checks the state of a control qubit which is not changed. But if the control qubit is in the state $|1\\rangle$, the gate changes the state of the target qubit; if the state of the control qubit is $|0\\rangle$ no change is made at all. In the notation below, assume the first qubit is the control, and the second is the target.\n",
@@ -401,6 +414,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "450722ee-ed32-4cf6-a148-f5f1505a7e29",
    "metadata": {},
    "outputs": [
     {
@@ -422,6 +436,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "aa9395d5-1434-4105-b69d-01081b452958",
    "metadata": {},
    "source": [
     "Note that the first qubit listed in `qc.cx(0,1)` is the control, and the second is the target. Diagrammatically, the target is the one with the \"+\" sign or cross on it.\n",
@@ -436,6 +451,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
+   "id": "16adb44e-4f31-442a-919f-440b7556830e",
    "metadata": {},
    "outputs": [
     {
@@ -461,6 +477,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9d3e3713-1263-4bf0-a19e-1b4188bc1b2c",
    "metadata": {},
    "source": [
     "The name of the gate `ry` specifies the axis about which the rotation occurs. The first argument $\\pi/2$ refers to the amount of the rotation, and the second argument specifies the qubit on which the gate is to be placed.\n",
@@ -493,6 +510,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a75b24dc-93e6-4328-8e7c-a830923f0d22",
    "metadata": {},
    "source": [
     "## From physical experiment to quantum circuits\n",
@@ -536,6 +554,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "2bcb08dc-00a8-4870-9b4e-c2fcff2eda1d",
    "metadata": {},
    "source": [
     "### Step 1: Mapping our results to a quantum circuit"
@@ -544,6 +563,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
+   "id": "3a1055db-79b5-4e75-a179-a2e58397c627",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -554,6 +574,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ace4eed9-4733-4b47-adbc-5f817f802d17",
    "metadata": {},
    "source": [
     "Remember that 1/3 of the time Rihanna's axis of choice will be $2\\pi/3$ radians from Lucas's, 1/3 of the time it will be $4 \\pi/3$ radians from Lucas's, and 1/3 of the time, they will choose the same axis. So we actually need to make 3 quantum circuits for these 3 cases, and add up the results. We'll carefully explain the first one, and the last two we will simply state."
@@ -562,6 +583,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
+   "id": "562955a0-4b6f-479d-a6f4-1036c9dfa36a",
    "metadata": {},
    "outputs": [
     {
@@ -600,6 +622,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "aa8f6e66-fb34-4f0c-8c10-4863c1416d7d",
    "metadata": {},
    "source": [
     "The code below quickly constructs all three circuits in a more streamlined way. Note that the only difference between the three circuits is how far we rotate the two qubits about the $y$ axis."
@@ -608,6 +631,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
+   "id": "a786fa04-bbf8-4858-bf15-fa298c408347",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -632,6 +656,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
+   "id": "6fbbb600-2f0f-4f04-8e70-bf8a522ed4a0",
    "metadata": {},
    "outputs": [
     {
@@ -651,6 +676,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "48ca7144-bbdf-4052-91be-930457b2bba0",
    "metadata": {},
    "source": [
     "Now we will use a Qiskit primitive called the StatevectorSampler. A sampler is a primitive designed to sample all the possible states of a system and return probabilities (or in some cases, quasiprobabilities) of obtaining each state. We can specify a number of \"shots\", and look at the \"counts\" for each state."
@@ -659,6 +685,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
+   "id": "45e23f7e-5cd4-4c4a-b5c7-1a5cb984b442",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -680,6 +707,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1a3d5504-26d3-4c05-a2aa-1bcc066b3698",
    "metadata": {},
    "source": [
     "If we look at the counts from each circuit, we see that two of them were basically identical, and the third was quite different."
@@ -688,6 +716,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
+   "id": "29d76273-5022-45e1-bbd2-fad8c92b70cb",
    "metadata": {},
    "outputs": [
     {
@@ -707,6 +736,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b970fdbe-5359-49fd-83b7-04061e4ca7c7",
    "metadata": {},
    "source": [
     "Let us make a list of the possible outcomes and add up all the counts of each state from each of the three circuits to obtain overall probabilities."
@@ -715,6 +745,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
+   "id": "276fa4f7-9653-4b2b-bce3-64da2da9ff82",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -738,6 +769,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "3eb2f205-366f-4b56-8a56-263c82d5f2a8",
    "metadata": {},
    "source": [
     "Now we can print out the total counts for each outcome, and plot the histogram."
@@ -746,6 +778,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
+   "id": "3d6b18a0-fac5-4b7c-bd76-e01351cbca0c",
    "metadata": {},
    "outputs": [
     {
@@ -773,6 +806,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "395f7e53-45ef-4436-8981-864dd13c84ac",
    "metadata": {},
    "source": [
     "### Check-in question\n",
@@ -800,6 +834,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b2c169c6-2cac-4cea-a4e9-82d77a564eef",
    "metadata": {},
    "source": [
     "### Step 2: Optimize your quantum circuit for running on real hardware\n",
@@ -810,6 +845,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "99c527e4-8c7b-4ba9-9c5c-e4802c02c3ac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -830,6 +866,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
+   "id": "7e8c72e7-80ba-40bf-aa39-d7be35005f24",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -848,6 +885,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
+   "id": "afebde3b-0b10-4147-83d5-4850bd14ccec",
    "metadata": {},
    "outputs": [
     {
@@ -867,6 +905,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1b71bd36-7444-4644-8586-878a3fa76fae",
    "metadata": {},
    "source": [
     "### Step 3: Execute your job on IBM quantum computers using Runtime primitives\n",
@@ -877,6 +916,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "5e596477-a0ec-4d87-b708-614c7b9e89a3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -904,6 +944,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
+   "id": "4611b228-60d3-4c3a-9c41-b3e3b7adc13e",
    "metadata": {},
    "outputs": [
     {
@@ -949,6 +990,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
+   "id": "a09d88b4-f9a1-407b-bfab-ced5904e1de6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1002,6 +1044,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
+   "id": "ed2c5fb3-462b-42b8-816c-4d4bd5b3f390",
    "metadata": {},
    "outputs": [
     {
@@ -1021,6 +1064,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "81def1db-712c-4632-8cf0-8da330a248b6",
    "metadata": {},
    "source": [
     "### Step 4: Post-process and analysis\n",
@@ -1055,6 +1099,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e39e1e71-e09c-4824-bc45-146b318c0f70",
    "metadata": {},
    "source": [
     "### Critical concepts:\n",
@@ -1142,7 +1187,7 @@
  "metadata": {
   "description": "Learn what measurement statistics are predicted by hidden variables and by quantum mechanics, and check which is correct using a real quantum computer.",
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1156,7 +1201,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.13"
+   "version": "3"
   },
   "title": "Bell's inequality with Qiskit",
   "widgets": {
