--- a/learning/courses/qiskit-in-classrooms-quantum-mechanics/superposition-with-qiskit.ipynb
+++ b/learning/courses/qiskit-in-classrooms-quantum-mechanics/superposition-with-qiskit.ipynb
@@ -40,9 +40,7 @@
     "  alt=\"YT thumbnail\"\n",
     "  href=\"https://youtu.be/TZ-sUHK8vVQ?si=eWsPn1Vd6wDtt6Uh\"\n",
     "  src=\"/learning/images/courses/qiskit-in-classrooms-quantum-mechanics/superposition-with-qiskit/YT-thumb.avif\"\n",
-    "/>\n",
-    "\n",
-    "   "
+    "/>"
    ]
   },
   {
@@ -1147,7 +1145,7 @@
  "metadata": {
   "description": "Learn about superposition and what it means for measurements on quantum computers.",
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1161,7 +1159,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.13"
+   "version": "3"
   },
   "title": "Superposition with Qiskit",
   "widgets": {
